# vision-based-control-of-GO1-robot

./: GO1_with_gestures  README.md
cut_n_repub/: package.xml  setup.cfg  setup.py
cut_n_repub/cut_n_repub/: go1_all_repub.py  go1_front_repub.py  webcam_repub.py
gscam/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
gscam/examples/: abdomen.launch.xml  chin.launch.xml  front.launch.xml  front.launch_with_repub.xml  go1_all.launch.xml  go1_all.launch_with_repub.xml  left.launch.xml  my.launch.xml  right.launch.xml  v140v_parameters.ini  videofile.launch.xml
gscam/include/gscam/: gscam.hpp
gscam/src/: gscam.cpp
media_pipe_ros2/launch/: pose2cmd_go1_launch.py  pose2cmd_webcam_launch.py
media_pipe_ros2/media_pipe_ros2/: cmd_sub.py  feature_extractor.py  human_pose_go1.py  human_pose_webcam.py
unitree_ros2_to_real/unitree_legged_sdk/: CMakeLists.txt
unitree_ros2_to_real/unitree_legged_sdk/examples/: example_walk.cpp
